# webdev-template

./: .env.deploy.example  .env.example  .gitignore  .pre-commit-config.yaml  Makefile  README.md  SECURITY.md  SETUP.md  docker-compose.yml  flags.yml
backend/: .coverage  Dockerfile  create_superuser.py  extract_openapi.py  openapi.json  pyproject.toml  pytest.ini  requirements-dev.txt  requirements-frozen.txt  requirements.txt  ruff.toml  seed.py
backend/alembic/: env.py
backend/alembic/versions/: 000_add_users.py  001_add_organizations_and_org_memberships.py  002_add_email_verification.py  003_add_oauth_and_api_keys.py  004_add_superuser_and_onboarding.py  005_add_notifications_table.py  11a1bf2b6fbe_add_org_invitations.py  827488ef1299_make_datetimes_timezone_aware.py  aa41a24dbfc6_add_audit_logs_and_feature_flag_.py  ca3c8fcb00d8_merge_heads.py  dfd99d910337_add_files.py
backend/app/: main.py  worker.py
backend/app/api/: deps.py
backend/app/core/: config.py  db.py  exceptions.py  influx.py  middleware.py  security.py
backend/app/jobs/: examples.py
backend/app/models/: __init__.py  api_key.py  audit_log.py  base.py  feature_flag.py  file.py  invitation.py  notification.py  oauth_account.py  org.py  user.py  verification.py
backend/tests/: conftest.py  factories.py  helpers.py  test_api_keys.py  test_audit.py  test_auth.py  test_cache.py  test_email_verification.py  test_files.py  test_files_service.py  test_flags.py  test_health.py  test_invitation_service.py  test_invitations.py  test_oauth.py  test_oauth_models.py  test_org_service.py  test_orgs.py  test_pagination.py  test_security.py  test_stats.py
(+168 files in other folders)
