[project]
name = "backend"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11.9"
dependencies = [
    "aiosmtplib==3.0.1",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "bcrypt==4.0.1",
    "celery==5.4.0",
    "email-validator==2.1.1",
    "fastapi==0.111.0",
    "httpx==0.27.0",
    "influxdb-client==1.43.0",
    "jinja2==3.1.4",
    "minio==7.2.7",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pyjwt==2.8.0",
    "python-multipart==0.0.9",
    "pyyaml==6.0.1",
    "redis==5.0.4",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.30",
    "sqlmodel==0.0.19",
    "structlog==24.1.0",
    "uvicorn[standard]==0.29.0",
]

[dependency-groups]
dev = [
    "aiosmtplib==3.0.1",
    "aiosqlite==0.20.0",
    "alembic==1.13.1",
    "asyncpg==0.29.0",
    "bcrypt==4.0.1",
    "celery==5.4.0",
    "email-validator==2.1.1",
    "factory-boy==3.3.0",
    "faker==25.2.0",
    "fakeredis==2.35.1",
    "fastapi==0.111.0",
    "greenlet==3.0.3",
    "httpx==0.27.0",
    "influxdb-client==1.43.0",
    "jinja2==3.1.4",
    "minio==7.2.7",
    "pydantic==2.7.1",
    "pydantic-settings==2.2.1",
    "pyjwt==2.8.0",
    "pytest==8.2.0",
    "pytest-asyncio==0.23.6",
    "pytest-cov==5.0.0",
    "pytest-xdist==3.8.0",
    "python-multipart==0.0.9",
    "pyyaml==6.0.1",
    "redis==5.0.4",
    "respx==0.23.1",
    "ruff==0.4.4",
    "slowapi==0.1.9",
    "sqlalchemy==2.0.30",
    "sqlmodel==0.0.19",
    "structlog==24.1.0",
    "uvicorn[standard]==0.29.0",
]
